corrected comam to athens.json

--- a/src/locales/ge/athens.json
+++ b/src/locales/ge/athens.json
@@ -13,7 +13,7 @@
     },
     "modal": {
       "title": "Eule der Athene",
-      "text": "<0>In der griechischen Mythologie stellt eine kleine Eule (Athene noctua)</0> traditionell Athene, die jungfräuliche Göttin der Weisheit, dar oder begleitet sie. Aufgrund dieser Assoziation wurde der Vogel - oft als "Eule der Athene" bezeichnet - in der gesamten westlichen Welt als Symbol für Wissen, Weisheit, Scharfsinn und Gelehrsamkeit verwendet."
+      "text": "<0>In der griechischen Mythologie stellt eine kleine Eule (Athene noctua)</0> traditionell Athene, die jungfräuliche Göttin der Weisheit, dar oder begleitet sie. Aufgrund dieser Assoziation wurde der Vogel - oft als Eule der Athene bezeichnet — in der gesamten westlichen Welt als Symbol für Wissen, Weisheit, Scharfsinn und Gelehrsamkeit verwendet."
     },
     "criticalDocuments": {
       "title": "Wichtige Dokumente",
