corrected comma to get-started.json

--- a/src/locales/ge/get-started.json
+++ b/src/locales/ge/get-started.json
@@ -38,7 +38,7 @@
       },
       " roles": {
         "title": "Rollen",
-        "text": "Unser aktuelles Testnet ermöglicht es auch, an einigen der Plattformrollen teilzunehmen, die im Mainnet verfügbar sein werden.<0/><0/>Die Teilnahme an diesen Rollen wird in tJOY (unserem Testnet-Token) belohnt, der durch Fiat-Reserven bei Jsgenesis gedeckt ist und gegen Bitcoin-Cash eingelöst werden kann."
+        "text": "Unser aktuelles Testnet ermöglicht es auch, an einigen der Plattformrollen teilzunehmen, die im Mainnet verfügbar sein werden.<0/><0/>Die Teilnahme an diesen Rollen wird in tJOY (unserem Testnet-Token) belohnt, der durch Fiat-Reserven bei Jsgenesis gedeckt ist und gegen Bitcoin-Cash eingelöst werden kann.",
         "imageAlt": "masks"
       }
     },
