correction to giza.json

--- a/src/locales/ge/giza.json
+++ b/src/locales/ge/giza.json
@@ -40,7 +40,7 @@
     },
     "map": {
       "title": "Gizeh",
-      "text": "<0>Das Gebiet des heutigen Gizeh diente im 2. Jahrtausend v. Chr. als Nekropole mehrerer Pharaonen, die das alte Ägypten regierten.</0> Drei antike Gräber, die in Form von riesigen Pyramiden errichtet wurden, bilden den beeindruckenden und weltweit berühmten Pyramidenkomplex von Gizeh.<1/><1/>Diese Pyramiden sind in der westlichen Vorstellung seit Hunderten von Jahren ein Symbol für das alte Ägypten. Sie wurden erstmals im antiken Griechenland "populär" gemacht, als die Große Pyramide von Antipater von Sidon als eines der Sieben Weltwunder aufgeführt wurde.<1/><1/><2><0/> Lies den Blogbeitrag</2>"
+      "text": "<0>Das Gebiet des heutigen Gizeh diente im 2. Jahrtausend v. Chr. als Nekropole mehrerer Pharaonen, die das alte Ägypten regierten.</0> Drei antike Gräber, die in Form von riesigen Pyramiden errichtet wurden, bilden den beeindruckenden und weltweit berühmten Pyramidenkomplex von Gizeh.<1/><1/>Diese Pyramiden sind in der westlichen Vorstellung seit Hunderten von Jahren ein Symbol für das alte Ägypten. Sie wurden erstmals im antiken Griechenland populär gemacht, als die Große Pyramide von Antipater von Sidon als eines der Sieben Weltwunder aufgeführt wurde.<1/><1/><2><0/> Lies den Blogbeitrag</2>"
     }
   }
 }
