correct point to landing.json

--- a/src/locales/ge/landing.json
+++ b/src/locales/ge/landing.json
@@ -124,7 +124,7 @@
       }
     },
     "earnTokens": {
-      "title": "Verdien Mainnet-Tokens, Bargeld und Einfluss".
+      "title": "Verdien Mainnet-Tokens, Bargeld und Einfluss."
     }
   }
 }
