--- a/src/locales/ge/acropolis.json
+++ b/src/locales/ge/acropolis.json
@@ -53,7 +53,7 @@
     },
     "map": {
       "title": "Akropolis von Athen",
-      "text": "<0>Die Akropolis ist eine Zitadelle auf einem Hügel im Herzen von Athen.</0> Sie war auch das Herzstück des antiken Griechenlands, einer mächtigen Zivilisation und eines Reiches. Die Akropolis ist berühmt für ihre antiken Gebäude, ihre Architektur und ihre historische Bedeutung und ist eine der wichtigsten Touristenattraktionen von Athen. Sie steht auf der UNESCO Weltkulturerbe-Liste.<1/><1/> Wir haben den Namen gewählt, weil wir unsere Ambitionen für das nächste Testnet nach einigen Problemen mit der Veröffentlichung von Athen zurückschrauben mussten. Daher kann Acropolis als Unterversion betrachtet werden, obwohl es einige neue Funktionen enthält, die nicht für Athen gedacht waren. <1/><1/> <2><0/> Vorheriges Testnet erforschen</2>"
+      "text": "<0>Die Akropolis ist eine Zitadelle auf einem Hügel im Herzen von Athen.</0> Sie war auch das Herzstück des antiken Griechenlands, einer mächtigen Zivilisation und eines Reiches. Die Akropolis ist berühmt für ihre antiken Gebäude, ihre Architektur und ihre historische Bedeutung und ist eine der wichtigsten Touristenattraktionen von Athen. Sie steht auf der UNESCO Weltkulturerbe-Liste.<1/><1/> Wir haben den Namen gewählt, weil wir unsere Ambitionen für das nächste Testnet nach einigen Problemen mit der Veröffentlichung von Athen zurückschrauben mussten. Daher kann Akropolis als Unterversion betrachtet werden, obwohl es einige neue Funktionen enthält, die nicht für Athen gedacht waren. <1/><1/> <2><0/> Vorheriges Testnet erforschen</2>"
     }
   }
 }
