--- a/src/locales/ge/alexandria.json
+++ b/src/locales/ge/alexandria.json
@@ -5,7 +5,7 @@
     },
     "hero": {
       "title": "Alexandria Network",
-      "text": "Der Alexandria Release konzentriert sich auf wichtige technische Updates, die eine effizientere zukünftige Entwicklung ermöglichen werden.",
+      "text": "Der Alexandria Release konzentriert sich auf wichtige technische Updates, die eine effizientere Entwicklung ermöglichen werden.",
       "chipText": "Was ist das?"
     },
     "heroCard": {
