--- a/src/locales/ge/acropolis.json
+++ b/src/locales/ge/acropolis.json
@@ -9,7 +9,7 @@
       "chipText": "Was ist das?"
     },
     "heroCard": {
-      "title": "ERSETZT VON ROME ON"
+      "title": "ERSETZT VON ROME AN"
     },
     "modal": {
       "title": "Die Akropolis von Athen",
