--- a/src/locales/ge/alexandria.json
+++ b/src/locales/ge/alexandria.json
@@ -9,7 +9,7 @@
       "chipText": "Was ist das?"
     },
     "heroCard": {
-      "title": "ERSETZT DURCH BABYLON ON"
+      "title": "ERSETZT DURCH BABYLON AN"
     },
     "modal": {
       "title": "Alexandria",
