--- a/src/locales/ge/get-started.json
+++ b/src/locales/ge/get-started.json
@@ -26,7 +26,7 @@
       },
       "bountiesCarousel": {
         "all": "alle",
-        " coding": "Codierung",
+        " coding": "Programmierung",
         "design": "Design",
         " marketing": "Marketing",
         " research": "Forschung",
