--- a/src/locales/ge/constantinople.json
+++ b/src/locales/ge/constantinople.json
@@ -1,5 +1,5 @@
 {
-  "Konstantinopel": {
+  "constantinople": {
     "siteMetadata": {
       "description": "Erkunden Sie das Constantinople Testnet"
     },
