--- a/src/locales/ge/manifesto.json
+++ b/src/locales/ge/manifesto.json
@@ -38,7 +38,7 @@
         "initialHurdle": "Dies hat es neu entstehenden Gemeinschaften, wie der Bitcoin-Gemeinschaft, wiederholt ermöglicht, die anfängliche Hürde des Netzwerkeffekts zu überwinden [1, 2, 3]. Es gibt keine Gewissheit, dass dies ausreichen wird, aber wir glauben, dass dieser Mechanismus so vielversprechend ist wie nichts anderes, das seit langem eine Chance haben wird."
       }
     },
-    "Rechenschaftspflicht": {
+    "accountability": {
       "title": "Rechenschaftspflicht in großem Maßstab",
       "text": {
         "createAndSustain": "Zweitens stellt sich die Frage, wie die Rechenschaftspflicht in einer solchen Plattform geschaffen und aufrechterhalten werden kann, wenn sie tatsächlich eine Größenordnung erreicht.",
