--- a/src/locales/ge/rome.json
+++ b/src/locales/ge/rome.json
@@ -48,7 +48,7 @@
         }
       }
     },
-    "Rollen": {
+    "roles": {
       "title": "Inzentivierte Rollen für das Rome Network"
     },
     "map": {
