--- a/src/locales/ge/sparta.json
+++ b/src/locales/ge/sparta.json
@@ -30,7 +30,7 @@
         }
       }
     },
-    "Rollen": {
+    "roles": {
       "title": "Im Sparta Testnet verfügbare Rollen"
     },
     "map": {
