--- a/src/locales/ge/token.json
+++ b/src/locales/ge/token.json
@@ -48,7 +48,7 @@
         "text": "Du kannst den aktuellen Wechselkurs (tJOY->USD) auf dieser Seite überprüfen (siehe oben)."
       }
     },
-    "Auszahlungen": {
+    "cashouts": {
       "title": "Ausstehende Auszahlungen",
       "subtitle": "Token, die im Rahmen dieses Austauschs an Jsgenesis gesendet werden, werden verbrannt, daher wird der endgültige Preis des Tokens durch einen solchen Austausch nicht beeinflusst.",
       "cashout": {
