--- a/src/locales/ru/token.json
+++ b/src/locales/ru/token.json
@@ -38,7 +38,7 @@
       },
       "howToCashout": {
         "title": "Как обменять tJOY на USD?",
-        "text": "Мы используем Bitcoin Cash (BCH) в качестве криптовалюты для вывода средств в наших тестнетах. Вы можете обналичить tJOY, сделав перевод на специальный адрес для сжигания тестовых токенов: <0>5D5PhZQNJzcJXVBxwJxZcsutjKPqUPydrvpu6HeiBfMaeKQu</0> . Перед тем как это сделать, вы должны установить в поле <0>memo</0> ключа, с которого осуществляется перевод, адрес вашего кошелька BCH. Курс обмена BCH/USD фиксируется на момент осуществления перевода.<1/><1/>С детальной информацией о выплатах можно ознакомиться <2>здесь</2>."
+        "text": "We use Bitcoin Cash (BCH) as a payment rail on our testnets. You can cashout tJOY by following these steps: <list><listItem>Fill out the form on <cashoutLink>this page</cashoutLink> and click submit</listItem><listItem>Go to the testnet profile associated with the same address you used in the cashout form and make a transfer (with the same amount of tokens) to our dedicated burn address: <bold>5D5PhZQNJzcJXVBxwJxZcsutjKPqUPydrvpu6HeiBfMaeKQu</bold></listItem><listItem>After that, go back to the form page and click the \"cash out\" button (do note that it can take up to a minute for the status server to process the exchange)</listItem></list>If there are any problems or inconsistencies, be sure to let us know on our <discordLink>Discord server</discordLink>!"
       },
       "howToEarn": {
         "title": "Как заработать токены основной сети JOY?",
