--- a/src/locales/es/token.json
+++ b/src/locales/es/token.json
@@ -38,7 +38,7 @@
       },
       "howToCashout": {
         "title": "How do I cashout tJOY to USD?",
-        "text": "We use Bitcoin Cash (BCH) as a payment rail on our testnets. You can cashout tJOY by making a transfer to the dedicated burn address: <0>5D5PhZQNJzcJXVBxwJxZcsutjKPqUPydrvpu6HeiBfMaeKQu</0> Before doing this, you should set the <0>memo</0> of the key from which the transfer is made to your BCH address. At the moment of the transfer, the BCH to USD exchange rate is locked. <1/><1/>More information on payouts can be found <2>here</2>."
+        "text": "We use Bitcoin Cash (BCH) as a payment rail on our testnets. You can cashout tJOY by following these steps: <list><listItem>Fill out the form on <cashoutLink>this page</cashoutLink> and click submit</listItem><listItem>Go to the testnet profile associated with the same address you used in the cashout form and make a transfer (with the same amount of tokens) to our dedicated burn address: <bold>5D5PhZQNJzcJXVBxwJxZcsutjKPqUPydrvpu6HeiBfMaeKQu</bold></listItem><listItem>After that, go back to the form page and click the \"cash out\" button (do note that it can take up to a minute for the status server to process the exchange)</listItem></list>If there are any problems or inconsistencies, be sure to let us know on our <discordLink>Discord server</discordLink>!"
       },
       "howToEarn": {
         "title": "How can I earn mainnet JOY?",
