--- a/src/locales/en/landing.json
+++ b/src/locales/en/landing.json
@@ -17,7 +17,7 @@
       }
     },
     "earnJoyCoins": {
-      "title": "Earn $JOY coins",
+      "title": "Earn $JOY tokens",
       "subtitle": "Here’s everything you need to know about Joystream and how to get started earning $JOY coins",
       "button": {
         "text": "Start earning"
