--- a/src/locales/fr/babylon.json
+++ b/src/locales/fr/babylon.json
@@ -1,7 +1,7 @@
 {
   "babylon": {
     "siteMetadata": {
-      "description": "Explore the Babylon testnet"
+      "description": "Explorez le testnet Babylon"
     },
     "hero": {
       "title": "Babylon Network",
